# RTS-Assignment

./: .gitignore  run_both.ps1
Source_Code/: Cargo.toml
Source_Code/src/: lib.rs  shared.rs
Source_Code/src/gcs/: fault.rs  mod.rs  monitor.rs  scheduler.rs  state.rs  telemetry.rs  uplink.rs
Source_Code/src/satellite/: command.rs  downlink.rs  fault.rs  mod.rs  scheduler.rs  sensor.rs  state.rs  telemetry.rs
