[package]
name = "gcs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "satellite"
path = "src/bin/satellite.rs"

[[bin]]
name = "gcs"
path = "src/bin/gcs.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
bincode = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
parking_lot = "0.12"
anyhow = "1"
rand = "0.8"

[lib]
name = "gcs"
path = "src/lib.rs"